apps/base/kube-prometheus-stack/kube-prometheus-stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-prometheus-stack
